add progression to characters
